--- a/frontend/src/app/views/about/about.view.html
+++ b/frontend/src/app/views/about/about.view.html
@@ -1,14 +1,14 @@
-<h1 class="text-3xl lg:text-5xl mb-6 font-bold font-title">
-	About foxCal
-</h1>
+<h1 class="text-3xl lg:text-5xl mb-6 font-bold font-title">About foxCal</h1>
 <h2 class="text-xl lg:text-3xl mb-3 font-title">
 	A simple, open source Calendar Server with support for CalDav
 </h2>
 <p class="my-1">
 	Learn more about foxCal on
-	<a class="text-secondary underline hover:text-primary"
-	   href="https://github.com/WNTR-Software/foxCal"
-	   target="_blank">
+	<a
+		class="text-secondary underline hover:text-primary"
+		href="https://github.com/WNTR-Software/foxCal"
+		target="_blank"
+	>
 		GitHub
 	</a>
 </p>
